# desafio_GFT_WEB

./: .gitignore  Dockerfile  README.md  export_output_folder.sh  pyproject.toml  run_tests.py
resource/: gherkin_pt_br.resource  main.robot
resource/data/: data_config_web_test.yaml
resource/data/sigup/: formulario_de_novo_usruario.yaml
resource/log/: console_log.resource  evidencias.resource
resource/pages/actions/: Basics.resource
resource/pages/actions/keywords/contact_us/: contact_us.resource
resource/pages/actions/keywords/home/: home.resource
resource/pages/actions/keywords/signup/: novo_usuario.resource
resource/pages/objects/contact_us/: contact_us_objects.resource
resource/pages/objects/home/: home_objects.resource
resource/pages/objects/signup/: signup_objects.resource
resource/utils/: config_path.py
test/Contact_us/: criar contato.robot
test/Signup/: novo_usuario.robot
